Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77047

When creating arrays using the spread operator it can crash in release mode on Linux

    XMLWordPrintable

Details

    • Linux/X11
    • f3b1568d05d6c31137aae186d2928fef0faba9b1 (qt/qtdeclarative/5.13)

    Description

      When creating arrays using the spread operator it can crash in release mode on Linux. With the example attached, it will crash in any of the 3 instances that uses the spread operator. This does not seem to happen on Windows or macOS. If it is run in debug mode then it is fine too.

      Attachments

        For Gerrit Dashboard: QTBUG-77047
        # Subject Branch Project Status CR V

        Activity

          People

            fabiankosmale Fabian Kosmale
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes